--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,1 +1,8 @@
-{}
+{
+  "menu": {
+    "home": "Inicio",
+    "resume": "Resumen",
+    "projects": "Proyectos",
+    "contact": "Contacto"
+  }
+}
