update: education content

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -43,7 +43,7 @@
             "year": "2018"
           },
           {
-            "degree": "Bachelor's in Computer Science",
+            "degree": "Bachelor of Science",
             "institution": "Antonio Jose De Sucre",
             "year": "2013 - 2017"
           }
