--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -43,8 +43,8 @@
             "year": "2018"
           },
           {
-            "degree": "Bachiller en Ciencias de Computación",
-            "institution": "Antonio José de Sucre",
+            "degree": "Bachiller en Ciencias",
+            "institution": "Antonio José De Sucre",
             "year": "2013 - 2017"
           }
         ]
