add: certificates data with models and services

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -65,8 +65,8 @@
           }
         ]
       },
-      "certifications": {
-        "title": "Certifications"
+      "certificates": {
+        "title": "Certificates"
       },
       "skills": {
         "title": "Skills",
