--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -65,7 +65,7 @@
           }
         ]
       },
-      "certifications": {
+      "certificates": {
         "title": "Certificados"
       },
       "skills": {
